# canto-hk-speech-pipeline

./: .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  README.md  pending_task.md  pyproject.toml  reconstruct.py  reconstruct_dead_sources.txt  requirements.txt  run_segment.sh  run_stage8_then_9.sh  run_stages_7_8_9.sh  run_t15_asr_sequential.sh
config/: pipeline.yaml  storage_layout.py  storage_layout.yaml
docs/: FINDINGS_ASR_AGREEMENT_THRESHOLDS.md  FINDINGS_DRAMA_SCRIPTED_SOURCES.md  G2P_MIGRATION_NOTE.md  IO_OPTIMIZATION_PLAN.md  JOURNAL_FIRST_PLAN.md  KNOWN_ISSUES.md  LABEL_FRAMEWORK_SPEC.md  MANIFEST_SCHEMA.md  ORCHESTRATOR_PLAN.md  PAUSE_CALIBRATION_REPORT.md  PAUSE_TOKEN_PUNCTUATION_PLAN.md  PIPELINE_REARCHITECTURE_PLAN.md  PIPELINE_REVIEW_2026-07-11.md  PIPELINE_REVIEW_2026-07-13.md  PIPELINE_SPEC.md  QUALITY_SPEC.md  REARCHITECTURE_IMPLEMENTATION_PLAN.md  SOURCE_GUIDE.md
pipeline/: __init__.py  cli.py  config.py  golden.py
scripts/: 00_reingest.py  01_discover.py  02_download.py  03_segment.py  03b_acoustic_pregate.py  04_transcribe.py  05_calibrate.py  06_filter.py  07_g2p.py  08_speaker_id.py  09_manifest.py  10_enrich_manifest.py  10_report.py  11_audio_tag.py  12_language_id.py  13_overlap_detect.py  backfill_downloaded_jsonl.py  fix_stale_asr_model_manifest.py  fix_stale_paths.py  test_sensevoice.py
sources/: audiobook_sources.yaml  drama_sources.yaml  edu_sources.yaml  gov_sources.yaml  hktv_sources.yaml  podcast_sources.yaml  radio_sources.yaml  rthk_sources.yaml  youtube_channels.yaml
tests/: test_asr_node.py  test_audio_bus.py  test_catalog.py  (+23 more)
(+63 files in other folders)
