[project]
name = "canto-hk-speech-pipeline"
version = "0.1.0"
description = "Reproducible data pipeline for building a Hong Kong Cantonese speech corpus for TTS training"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "faster-whisper>=1.2.1",
    "feedparser>=6.0.12",
    "librosa>=0.11.0",
    "numpy>=2.4.6",
    "panns-inference>=0.1.1",
    "praat-parselmouth>=0.4.6",
    "pyannote-audio>=4.0.4",
    "pyloudnorm>=0.2.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "soundfile>=0.14.0",
    "soxr>=0.5.0",
    "speechbrain>=1.1.0",
    "speechmos>=0.0.1.1",
    # canto-hk-g2p: install from source — https://github.com/typangaa/canto-hk-g2p
    "torchaudio>=2.11.0",
    "yt-dlp>=2026.3.17",
]

[tool.uv]
# tokenizers 0.23.1 (required by faster-whisper) breaks transformers' dependency check
# (transformers requires <=0.23.0 but 0.23.0 never existed on PyPI).
# Force 0.22.2 which satisfies transformers and works with faster-whisper at runtime.
override-dependencies = [
    "tokenizers>=0.22,<0.23.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
